Fixed Gap Issue

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -197,7 +197,7 @@ body {
   }
 }
 /* For Mobile Screens */
-@media only screen and (max-width: 362px) {
+@media only screen and (max-width: 380px) {
   .hero-title h1 {
     font-size: 2.75em;
     font-weight: 800;
@@ -410,7 +410,6 @@ body {
 .speaker-card .speaker-details .speaker-description {
   color: white;
   margin-top: 10px;
-
 }
 
 .speaker-card:hover > .speaker-details {
@@ -427,58 +426,56 @@ body {
   height: auto;
 }
 
-#spea-mobile{
+#spea-mobile {
   display: none;
 }
 
 @media only screen and (max-width: 1024px) {
-.speaker-square .content .big{
-  font-size: 5em;
+  .speaker-square .content .big {
+    font-size: 5em;
+  }
 }
+/* Using 767 instead of 768 to fix weird issues on iPad */
+@media only screen and (max-width: 767px) {
+  .speaker-square .content .small {
+    display: none;
+  }
+  #kers {
+    display: none;
+  }
+  #spea-desktop {
+    display: none;
+  }
+  #spea-mobile {
+    display: block;
+  }
+  .speaker-square .content .big {
+    font-size: 4em;
+  }
+  #spea-mobile .content .small {
+    display: block;
+    letter-spacing: 1.5px;
+  }
+  .speaker-card .speaker-details .speaker-name {
+    color: white;
+    font-weight: 600;
+    font-size: 1.5em;
+  }
+  .speaker-card .speaker-details .speaker-designation {
+    color: white;
+    font-weight: 400;
+    font-size: 1.25em;
+  }
 
-}
+  .speaker-card .speaker-details .speaker-description {
+    color: white;
+    margin-top: 10px;
+    font-size: 1.15em;
+  }
 
-@media only screen and (max-width: 768px) {
-.speaker-square .content .small{
-  display:none;
-}
-#kers{
-  display:none;
-}
-#spea-desktop{
-  display:none;
-}
-#spea-mobile{
-  display:block;
-}
-.speaker-square .content .big{
-  font-size: 4em;
-}
-#spea-mobile .content .small{
-  display: block;
-  letter-spacing: 1.5px;
-}
-.speaker-card .speaker-details .speaker-name {
-  color: white;
-  font-weight: 600;
-  font-size: 1.5em;
-}
-.speaker-card .speaker-details .speaker-designation {
-  color: white;
-  font-weight: 400;
-  font-size: 1.25em;
-}
-
-.speaker-card .speaker-details .speaker-description {
-  color: white;
-  margin-top: 10px;
-  font-size: 1.15em;
-}
-
-.speaker-card .speaker-details {
-  top: calc(100% - 90px); 
-}
-
+  .speaker-card .speaker-details {
+    top: calc(100% - 90px);
+  }
 }
 /* Styles for Footer Area */
 
@@ -508,7 +505,7 @@ body {
     font-size: 0.75em;
   }
   .madeby {
-    font-size: 0.75em;
+    font-size: 0.65em;
   }
 }
 
